<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="false"
    android:background="#2679D5"
    android:backgroundTintMode="screen"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtinicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completa_la_encuesta"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/Question_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Switch
        android:id="@+id/Question_1"
        android:layout_width="387dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:minHeight="48dp"
        android:showText="true"
        android:splitTrack="true"
        android:text="@string/Question_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textOff="@string/NO"
        android:textOn="@string/SI"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtinicial"
        tools:ignore="TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/Question_2"
        android:layout_width="387dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:showText="true"
        android:splitTrack="true"
        android:text="@string/Question_2"
        android:textOff="@string/NO"
        android:textOn="@string/SI"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question_1"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="¿HA TENIDO CONTACTO CON ALGUNA PERSONA ENFERMA DE CORONAVIRUS O CASO SOSPECHOSO DE COVID EN LOS ÚLTIMOS 7 DÍAS?" />

    <Switch
        android:id="@+id/Question_3"
        android:layout_width="387dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:showText="true"
        android:splitTrack="true"
        android:text="@string/Question_3"
        android:textOff="@string/NO"
        android:textOn="@string/SI"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question_2"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="PRESENTA  SÍNTOMAS ASOCIADOS AL COVID?" />

    <Switch
        android:id="@+id/Question_4"
        android:layout_width="387dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:showText="true"
        android:splitTrack="true"
        android:text="@string/Question_4"
        android:textOff="@string/NO"
        android:textOn="@string/SI"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question_3"
        tools:ignore="TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/Question_5"
        android:layout_width="387dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:showText="true"
        android:splitTrack="true"
        android:text="@string/Question_5"
        android:textOff="@string/NO"
        android:textOn="@string/SI"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question_4"
        tools:ignore="TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/Question_6"
        android:layout_width="387dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:showText="true"
        android:splitTrack="true"
        android:text="@string/Question_6"
        android:textOff="@string/NO"
        android:textOn="@string/SI"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question_5"
        tools:ignore="TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/Question_7"
        android:layout_width="387dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:showText="true"
        android:splitTrack="true"
        android:text="@string/Question_7"
        android:textOff="@string/NO"
        android:textOn="@string/SI"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question_6"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="@string/Question_7" />

    <TextView
        android:id="@+id/Question_8"
        android:layout_width="260dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/Question_8"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="10sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/Question_7"
        app:layout_constraintTop_toBottomOf="@+id/Question_7" />

    <Spinner
        android:id="@+id/Select_Q_8"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:background="@color/material_dynamic_primary80"
        android:contentDescription="@string/Question_8"
        android:dropDownWidth="wrap_content"
        android:entries="@array/Modalidad_de_trabajo"
        android:foregroundGravity="center"
        android:popupBackground="@drawable/ic_launcher_foreground"
        android:popupElevation="8dp"
        android:popupTheme="@style/TextAppearance.AppCompat.Small"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/Question_7"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toEndOf="@+id/Question_8"
        app:layout_constraintTop_toBottomOf="@+id/Question_7"
        tools:ignore="@tools:sample/full_names[0],TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Selection_1"
        android:layout_width="387dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/Selection1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="10sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question_8" />

    <Switch
        android:id="@+id/Question_9"
        android:layout_width="387dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:showText="true"
        android:splitTrack="true"
        android:text="@string/Question_9"
        android:textOff="@string/NO"
        android:textOn="@string/SI"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Selection_1"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="@string/Question_9" />

    <EditText
        android:id="@+id/editTextDate_Q_15"
        android:layout_width="71dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:ems="4"
        android:inputType="date"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Question_15"
        app:layout_constraintTop_toBottomOf="@+id/Question_14"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/Question_15"
        android:layout_width="293dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:text="@string/Question_15"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="10sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/editTextDate_Q_15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question_14" />

    <TextView
        android:id="@+id/Question_12"
        android:layout_width="259dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/Question_12"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="10sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/select_Q_12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question_11" />

    <TextView
        android:id="@+id/Question_13"
        android:layout_width="293dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:text="@string/Question_13"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="10sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/editTextDate_Q_13"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question_12" />

    <Switch
        android:id="@+id/Question_14"
        android:layout_width="387dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:showText="true"
        android:splitTrack="true"
        android:text="@string/Question_14"
        android:textOff="@string/NO"
        android:textOn="@string/SI"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate_Q_13"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="@string/Question_14" />

    <EditText
        android:id="@+id/editTextDate_Q_13"
        android:layout_width="71dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:ems="4"
        android:inputType="date"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Question_13"
        app:layout_constraintTop_toBottomOf="@+id/Question_12"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/input_text_Q_10"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="209dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:alpha="@dimen/material_emphasis_disabled"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="start|top"
        android:hint="@string/Question_10"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="10sp"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textColorHint="#000000"
        android:textSize="10sp"
        android:textStyle="bold|italic"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Question_10"
        app:layout_constraintTop_toBottomOf="@+id/Question_9"
        tools:ignore="TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/Question_16"
        android:layout_width="387dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:showText="true"
        android:splitTrack="true"
        android:text="@string/Question_16"
        android:textOff="@string/NO"
        android:textOn="@string/SI"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate_Q_15"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="@string/Question_16" />

    <Switch
        android:id="@+id/Question_11"
        android:layout_width="387dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:showText="true"
        android:splitTrack="true"
        android:text="@string/Question_11"
        android:textOff="@string/NO"
        android:textOn="@string/SI"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_text_Q_10"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="@string/Question_11" />

    <Spinner
        android:id="@+id/select_Q_12"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:background="@color/material_dynamic_primary80"
        android:contentDescription="@string/Question_8"
        android:dropDownWidth="wrap_content"
        android:entries="@array/Vacuna"
        android:foregroundGravity="center"
        android:popupBackground="@drawable/ic_launcher_foreground"
        android:popupElevation="8dp"
        android:popupTheme="@style/TextAppearance.AppCompat.Small"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Question_12"
        app:layout_constraintTop_toBottomOf="@+id/Question_11"
        tools:ignore="@tools:sample/full_names[0],TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Question_10"
        android:layout_width="141dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/Question_10"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="10sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/input_text_Q_10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question_9" />

    <Switch
        android:id="@+id/Question_17"
        android:layout_width="387dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:showText="true"
        android:splitTrack="true"
        android:text="@string/Question_17"
        android:textOff="@string/NO"
        android:textOn="@string/SI"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question_16"
        tools:ignore="TouchTargetSizeCheck"
        tools:text="@string/Question_17" />

    <TextView
        android:id="@+id/Question_18"
        android:layout_width="217dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/Question_18"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="10sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/select_Q_18"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question_17" />

    <Spinner
        android:id="@+id/select_Q_18"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="4dp"
        android:background="@color/material_dynamic_primary80"
        android:contentDescription="@string/Question_8"
        android:dropDownWidth="wrap_content"
        android:entries="@array/Vacuna"
        android:foregroundGravity="center"
        android:popupBackground="@drawable/ic_launcher_foreground"
        android:popupElevation="8dp"
        android:popupTheme="@style/TextAppearance.AppCompat.Small"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Question_18"
        app:layout_constraintTop_toBottomOf="@+id/Question_17"
        tools:ignore="@tools:sample/full_names[0],TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/Send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Send"
        android:text="Enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question_18" />
</androidx.constraintlayout.widget.ConstraintLayout>
