<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="104dp"
        android:layout_height="29dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="64dp"
        android:text="Programa:"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="139dp"
        android:layout_height="29dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="54dp"
        android:text="@string/programa"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="143dp"
        android:layout_height="152dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="134dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfo"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewInfo"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="340dp"
        android:layout_height="82dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="36dp"
        android:text="INFORMACION DE USUARIO"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#212121"
        android:textColorHighlight="#212121"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConfig" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="334dp"
        android:layout_height="37dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="39dp"
        android:autoSizeTextType="none"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonConfig"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="69dp"
        android:layout_height="51dp"
        android:layout_marginStart="326dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="configUsuario"
        android:textAlignment="center"
        app:icon="@android:drawable/ic_menu_manage"
        app:iconPadding="10dp"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="104dp"
        android:layout_height="29dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:text="Genero:"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="140dp"
        android:layout_height="32dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:text="Hora Ingreso:"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="139dp"
        android:layout_height="29dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:text="@string/genero"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="139dp"
        android:layout_height="29dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:text="@string/hora_ingreso"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="107dp"
        android:text="Ingreso Habilitado"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="49dp"
        android:text="@string/validacion_ingreso"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>